tests/types/errors/mutate_through_let_field.mochi
type Point { x: int, y: int }
let p: Point = Point{x: 1, y: 2}
p.x = 5
